yaml-files/ingress/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
          - path: /jaeger
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
